[tool.poetry]
name = "aiven-price-calculator"
version = "0.1.0"
description = ""
authors = ["Ari-Pekka Repo <aprepo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
